--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "test": "npm run lint",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,16 +16,17 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.0",
-    "express-session": "^1.17.1",
+    "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.2.1"
+    "nodemon": "^2.0.12",
+    "prettier": "^2.3.2"
   }
 }
