--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "test": "npm run lint",
     "lint": "eslint .",
+    "lintfix": "eslint --fix .",
     "format": "prettier --write .",
     "watch": "nodemon server.js",
     "seed": "node seed"
